Fixed Axis2 binding so that it doesn't just hardcode port 8085 as it's not consistent with all the other bindings and prevents distributed nodes to work on different ports unless the application developer goes and specifies the port numbers explicitly in all composites. Allow an SCA node to configure the servlet host with a default port number for the node. Fixed DomainImpl and NodeImpl to configure the NodeFactory on time for SCA binding providers to pick it up. Fixed test composites which assumed port 8085 to always be used. Fixed distributed node test cases to specify proper node URIs.
git-svn-id: https://svn.apache.org/repos/asf/incubator/tuscany/java/sca@588299 13f79535-47bb-0310-9956-ffa450edef68